Common ApiResponse updated, Shifted to POST request Mapping for KYC